# folktunefinder-abc

./: .gitignore  Cargo.toml  LICENSE  README.md  features.md  fmt.sh  review_comments.sh  so_far.sh  so_far_so_bad.sh  so_far_so_good.sh  so_far_so_good_viz.sh  test.sh  typeset.sh
demo-html-templates/: about.html  header.html  home.html  search.html
src/: abc_lexer.rs  application.rs  archive.rs  cluster.rs  end_to_end_test.rs  features.rs  geometry.rs  main.rs  midi.rs  music.rs  ngram.rs  pitch.rs  relations.rs  representations.rs  search.rs  server.rs  storage.rs  svg.rs  text.rs  tune-ast.rs  tune_ast.rs  tune_ast_three.rs  tune_ast_two.rs  typeset.rs  viz.rs
test_resources/: 1.abc  butterfly.abc  so-far-good.abc  so-far.abc  tunecache
